# aau-cs-qic-project

./: .gitignore  grovers.ipynb  main.py  pyproject.toml
