[project]
name = "qic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pylatexenc>=2.10",
    "python-dotenv>=1.1.0",
    "qiskit>=2.0.2",
    "qiskit-ibm-runtime>=0.40.0",
]
